...
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingLeft="30sp"
                        android:paddingRight="30sp">

                        <com.google.android.material.chip.Chip
                            android:id="@+id/AlcoholChip"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checkable="true"
                            android:onClick="userQueriedUpdateListings"
                            android:text="Alcoholic"
                            app:checkedIconVisible="false"
                            app:chipBackgroundColor="@color/chip_color_list"
                            app:chipIcon="@drawable/ic_round_local_drink_24"
                            app:chipSurfaceColor="@color/text_secondary" />

                        <com.google.android.material.chip.Chip
                            android:id="@+id/SmokerChip"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checkable="true"
                            android:onClick="userQueriedUpdateListings"
                            android:text="Smoker"
                            app:checkedIconVisible="false"
                            app:chipBackgroundColor="@color/chip_color_list"
                            app:chipIcon="@drawable/ic_baseline_smoking_rooms_24"
                            app:chipSurfaceColor="@color/text_secondary" />

                        <com.google.android.material.chip.Chip
                            android:id="@+id/SocialChip"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checkable="true"
                            android:onClick="userQueriedUpdateListings"
                            android:text="Social"
                            app:checkedIconVisible="false"
                            app:chipBackgroundColor="@color/chip_color_list"
                            app:chipIcon="@drawable/ic_baseline_sports_kabaddi_24"
                            app:chipSurfaceColor="@color/text_secondary" />

                        <com.google.android.material.chip.Chip
                            android:id="@+id/NightOwlChip"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checkable="true"
                            android:onClick="userQueriedUpdateListings"
                            android:text="Night Owl"
                            app:checkedIconVisible="false"
...
                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/AuthLogout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:backgroundTint="@color/accent"
                    android:focusable="false"
                    android:fontFamily="sans-serif-medium"
...
        app:chipStartPadding="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/constraintLayout3"
        app:layout_constraintEnd_toEndOf="@+id/InboxTab"
        app:textEndPadding="8dp" />

    <ImageButton
        android:id="@+id/ProfileTab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:paddingLeft="30sp"
        android:paddingTop="10sp"
        android:paddingRight="30sp"
...
