<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:paddingLeft="50sp"
    android:paddingRight="50sp"
    tools:context=".AuthActivity">

    <ImageView
        android:id="@+id/AuthBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:scaleX="0.7"
        android:scaleY="0.7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/house" />

    <TextView
        android:id="@+id/AuthTitle"
        android:layout_width="115dp"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="Login"
        android:textColor="@color/text_primary"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AuthBack" />

    <TextView
        android:id="@+id/AuthSubtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="sans-serif-medium"
        android:text="Please sign in to continue."
        android:textColor="@color/text_secondary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AuthTitle" />

    <EditText
        android:id="@+id/AuthEmail"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/round_background_light"
        android:ems="10"
        android:hint="tommy@usc.edu"
        android:inputType="textEmailAddress"
        android:paddingStart="50sp"
        android:paddingTop="25sp"
        android:paddingBottom="10sp"
        android:textAlignment="viewStart"
        android:textColor="@color/text_primary"
        android:textColorHint="@color/text_secondary"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AuthSubtitle" />

    <TextView
        android:id="@+id/AuthEmailLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="10dp"
        android:text="EMAIL"
        android:textColor="@color/text_primary"
        android:textSize="10sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/AuthEmail"
        app:layout_constraintTop_toTopOf="@id/AuthEmail" />

    <ImageView
        android:id="@+id/AuthEmailIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="24dp"
        android:scaleX="0.8"
        android:scaleY="0.8"
        app:layout_constraintStart_toEndOf="@id/AuthEmail"
        app:layout_constraintStart_toStartOf="@+id/AuthEmail"
        app:layout_constraintTop_toTopOf="@+id/AuthEmail"
        app:srcCompat="@drawable/ic_outline_email_24" />

    <EditText
        android:id="@+id/AuthPassword"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/round_background_light"
        android:ems="10"
        android:hint="**********"
        android:inputType="textPassword"
        android:paddingLeft="50sp"
        android:paddingTop="25sp"
        android:paddingBottom="10sp"
        android:textColor="@color/text_primary"
        android:textColorHint="@color/text_secondary"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AuthEmail" />

    <TextView
        android:id="@+id/AuthPasswordLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="10dp"
        android:text="PASSWORD"
        android:textColor="@color/text_primary"
        android:textSize="10sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/AuthPassword"
        app:layout_constraintTop_toTopOf="@id/AuthPassword" />

    <ImageView
        android:id="@+id/AuthPasswordIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="24dp"
        android:scaleX="0.8"
        android:scaleY="0.8"
        app:layout_constraintStart_toStartOf="@+id/AuthPassword"
        app:layout_constraintTop_toTopOf="@+id/AuthPassword"
        app:srcCompat="@drawable/ic_outline_lock_24" />

    <Button
        android:id="@+id/ListingCreateSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="50dp"
        android:alpha="0.5"
        android:backgroundTint="@color/accent"
        android:enabled="false"
        android:focusable="false"
        android:fontFamily="sans-serif-medium"
        android:paddingLeft="60dp"
        android:paddingTop="20dp"
        android:paddingRight="60dp"
        android:paddingBottom="20dp"
        android:text="Login"
        android:textColor="@color/background"
        app:cornerRadius="70sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AuthPassword" />

    <TextView
        android:id="@+id/AuthReset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="50dp"
        android:fontFamily="sans-serif-medium"
        android:text="Forgot Password?"
        android:textColor="@color/accent"
        android:textSize="10sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ListingCreateSubmit" />

    <TextView
        android:id="@+id/AuthFooter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginBottom="50dp"
        android:fontFamily="sans-serif-medium"
        android:text="Don't have an account?"
        android:textColor="@color/text_secondary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/AuthSignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginBottom="50dp"
        android:fontFamily="sans-serif-medium"
        android:text="Sign up"
        android:textColor="@color/accent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/AuthFooter" />

</androidx.constraintlayout.widget.ConstraintLayout>